# micro-notify

./: .gitignore  .template.env  Dockerfile.channel  README.md  docker-compose.yaml
notify-channel/: .env  .template.env  Makefile  alembic.ini  email.Dockerfile  entrypoint.sh  pyproject.toml  template.env
notify-channel/migrations/: env.py
notify-channel/migrations/versions/: 2025_01_03_2056-create_table_emails_7d9ab2d53b40_.py  2025_01_04_0606-create_table_email_events_a63a0a21d301_.py  2025_01_04_0722-create_table_email_events_d8ceab3be097_.py
notify-channel/mk/: database.mk  default.mk
notify-channel/notify-shared/notify_shared/: __init__.py  base.py  command.py  storage.py  utils.py
notify-channel/notify_channel/application/commands/: send_email.py
notify-channel/notify_channel/application/services/: email.py
notify-channel/notify_channel/domain/email/interfaces/: repository.py
notify-channel/notify_channel/domain/email/models/: __init__.py  events.py
notify-channel/notify_channel/infra/configs/: main.yaml
notify-channel/notify_channel/infra/dependencies/: application.py  config.py  logging.py  rabbitmq.py  smtp.py  sqlalchemy.py
notify-channel/notify_channel/infra/email/: repository.py  service.py
notify-channel/notify_channel/infra/email/queue/: consumer.py  producer.py
notify-channel/notify_channel/infra/scripts/: email_consume.py
notify-channel/notify_channel/infra/shared/: sqlalchemy.py
notify-email/: pyproject.toml
notify-email/domain/mail/models/: mail.py
notify-email/notify_channel/infra/dependencies/: smtp.py
notify-email/notify_email/application/commands/: send_email.py
notify-email/notify_email/application/services/: email.py  smtp_email.py
notify-email/notify_email/domain/email/interfaces/: repository.py
notify-email/notify_email/domain/email/models/: __init__.py  email.py
notify-email/notify_email/domain/mail/interfaces/: repository.py
notify-email/notify_email/domain/mail/models/: __init__.py  mail.py
notify-email/notify_email/infra/configs/: logging.yaml  main.yaml
notify-email/notify_email/infra/dependencies/: application.py  logging.py  rabbitmq.py  smtp.py  sqlalchemy.py
notify-email/notify_email/infra/email/: repository.py
notify-email/notify_email/infra/email/queue/: consumer.py
notify-email/notify_email/infra/email/services/: smtp.py
notify-gateway/: .env  Dockerfile  Makefile  api.Dockerfile  docker-compose.yml  outbox.Dockerfile  pyproject.toml  status.Dockerfile  template.env
notify-gateway/entrypoints/: api.sh  outbox.sh  status.sh
notify-gateway/migration/: env.py
notify-gateway/migration/versions/: f6e63ee93ded_initial_revision.py
notify-gateway/mk/: database.mk  default.mk
notify-gateway/src/: config.py  main.py  outbox.py  status.py
notify-gateway/src/domains/message/domain/: message.py  message_repository.py  message_status.py  (+5 more)
notify-gateway/src/views/create/: route.py  schemas.py
notify-gateway/src/views/status/: route.py
notify-shared/: pyproject.toml
notify-shared/notify_shared/: __init__.py  base.py  command.py  query.py  storage.py  utils.py
(+15 files in other folders)
